# homeassistant-otel

./: .releaserc  LICENSE.md  README.md  docker-compose.dev.yml  hacs.json  pyproject.toml
.github/workflows/: quality.yml  release.yml
config/grafana/provisioning/datasources/: tempo.yaml
config/tempo/: tempo.yaml
custom_components/homeassistant_otel/: __init__.py  config_flow.py  const.py  context_linking.py  event_tracing.py  manifest.json  mqtt_apply.py  mqtt_correlation.py  mqtt_tracing.py  otlp.py  propagation.py  rest_tracing.py  service_tracing.py  span_attributes.py  strings.json  tracing.py  websocket_event_propagation.py  websocket_tracing.py
custom_components/homeassistant_otel/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_mqtt_correlation.py  test_otlp.py  test_websocket_tracing.py
