[project]
name = "homeassistant-otel"
authors = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
maintainers = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
license = { file = "LICENSE.md" }
keywords = [
    "homeassistant",
    "custom-component",
    "open-telemetry",
    "opentelemetry",
    "otel",
    "integration",
    "home-assistant",
    "home-assistant-custom-component",
    "home-assistant-integration",
    "home-assistant-integration",
]
description = "A custom component for creating OpenTelemetry traces."
readme = "README.md"
requires-python = ">=3.14.2"
version = "0.0.0-dev"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "homeassistant-stubs",
    "voluptuous-stubs",
    "homeassistant>=2026.6.0",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/eulemitkeule/homeassistant-otel"
Documentation = "https://github.com/eulemitkeule/homeassistant-otel/blob/master/README.md"
Changelog = "https://github.com/EuleMitKeule/homeassistant-otel/releases"
Issues = "https://github.com/eulemitkeule/homeassistant-otel/issues"
